--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "host" : "vite preview --host"
+    "host": "vite preview --host"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,6 +19,7 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
